--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity
             android:name="com.superbank.LoginActivity"
             android:windowSoftInputMode="stateHidden"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,6 +29,7 @@
         <activity
             android:name="com.superbank.MainActivity"
             android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
         </activity>
         <activity
